deploy: e309126eecc78701f25a7c02e6891ffb6681d83d

--- a/glossary/index.html
+++ b/glossary/index.html
@@ -223,9 +223,9 @@
   <li class="usa-sidenav__item">
     
 
-<a href="/HCD-Design-Operations-Guide/cycle/">
+<a href="/HCD-Design-Operations-Guide/setting-up/">
   
-    Discovery Cycle
+    Setting Up
   
 </a>
 
