--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@
   <li class="usa-sidenav__item">
     
 
-<a href="/HCD-Design-Operations-Guide/cycle/">
+<a href="/HCD-Design-Operations-Guide/setting-up/">
   
-    Discovery Cycle
+    Setting Up
   
 </a>
 
