--- a/opportunities/index.html
+++ b/opportunities/index.html
@@ -223,9 +223,9 @@
   <li class="usa-sidenav__item">
     
 
-<a href="/HCD-Design-Operations-Guide/cycle/">
+<a href="/HCD-Design-Operations-Guide/setting-up/">
   
-    Discovery Cycle
+    Setting Up
   
 </a>
 
