--- a/purpose/index.html
+++ b/purpose/index.html
@@ -285,9 +285,9 @@
   <li class="usa-sidenav__item">
     
 
-<a href="/HCD-Design-Operations-Guide/cycle/">
+<a href="/HCD-Design-Operations-Guide/setting-up/">
   
-    Discovery Cycle
+    Setting Up
   
 </a>
 
@@ -364,19 +364,23 @@
       
 
 
-      <p><i>This Guide is currently under development and will be live soon! Currently this link holds content for the HCD Discovery Concept Guide.</i></p>
+      <p>Our Human Centered Design guide series— of which this guide is a part— is an extension of The Lab at OPM’s work teaching design to civil servants across federal government. The guide series focuses on the four phases of Human Centered Design: discovery, design, deliver, and measure. For each phase, we have created an operations guide and a concept guide. This operations guide, and its companion concept guide, focus on the design phase. Design comes after discovery research. Design is that phase of work when you take all that you’ve learned through discovery research and use it to create something that improves people’s experiences with a product, process, or system.</p>
 
-<p>This Human-Centered Design Discovery Stage Field Guide is a teaching tool and a reference guide. It was originally created for Veterans Experience Office (VEO) by Insight &amp; Design, a team within VEO that has expertise in Human-Centered Design (HCD). This guide was later adapted for use across other agencies through a partnership between GSA’s Office of Customer Experience and The Lab at OPM.</p>
+<p><img src="/HCD-Design-Operations-Guide/img/HCD_bubbles-design.svg" alt="HCD four part bubble diagram with the second phase, Design, highlighted in orange." /></p>
 
-<p>HCD is a qualitative research method that helps groups solve problems and seek solutions in a way that prioritizes customer needs over a system’s needs.</p>
+<p>This guide is to be read along with our design concept guide. This guide explains how to go about the work of design and the concept guide explains why we do design. Together, the two will give you an overview of —and an orientation to— Human Centered Design (HCD). Additionally, this operations guide will help you enact the design phase of an HCD project. We will walk you through the workflow necessary to move a project from research insights towards product development, providing you with the means and methods along the way.</p>
 
-<p>HCD involves four key phases of work. This guide solely focuses on the first phase, called the Discovery phase, or simply discovery.</p>
+<h3 id="participants">Participants</h3>
 
-<p>Discovery provides an opportunity to carry out an ongoing and high-priority assignment by using the teams best equipped to conduct on-the-ground qualitative research.</p>
+<p>As in the previous guides in this series, we will refer to the people for and with design teams work as participants in the design work. For more details on the reasoning behind this terminonlogy, please see the <a href="https://the-lab-at-opm.github.io/HCD-Discovery-Concept-Guide/purpose/">Purpose section</a> of the HCD Design Phase Concept Guide.</p>
 
-<p>This guide offers step-by-step guidance on how to conduct HCD discovery and then synthesize the research findings, towards the goal of helping your agencies identify opportunities to improve service. The qualitative data can also help provide a more nuanced perspective of the quantitative data that is collected and interpreted.</p>
+<p>In brief, thinking of participants as “users” or “customers” sidelines them into simply receiving products, services, and systems. In contrast, in Human-Centered Design, both the designers and the people for whom the designed products, services, and systems are made participate in the design, use, and evaluation processes. Participants are equal to the design team and the leadership stakeholders, and the project as a whole is driven primarily by participants’ input. While the designers create the prototypes or models for solutions to participant needs, they can only create and refine these products, services, and systems through continued collaboration with the participants throughout the design process.</p>
 
-<p>In a broader sense, this guide also enhances the understanding and practice of HCD throughout the Federal Government. Use the tools and techniques within this guide to build a better understanding the problems your agency is facing, whether through mastering the process individually or identifying the right internal or external partners who can help deliver your agency’s mission.</p>
+<p>In this way, the participants have an active role in the life cycle of our work. This approach is sometimes called Participatory Design; you can learn about and practice it in detail in Participatory Design, one of the Lab’s open enrollment classes.</p>
+
+<p><strong>A Note on Team Structure</strong></p>
+
+<p>In this Operations Guide, you will map your teams skills, resources, and assets in regards to the requirements of your proposed designs. If your Design phase will almost certainly require technical expertise that your Discovery team does not have, such as engineering, social work, or graphic design skills. Identify and recruit an available and sympathetic expert in that area as soon as possible. By including this person in your core team before you start the design work itself, the team will benefit from their input, and they will be able to invest more deeply in the project than if they were brought in simply to realize your product, service, or system vision.</p>
 
     </div>
   </main>
