--- a/working/index.html
+++ b/working/index.html
@@ -307,9 +307,9 @@
   <li class="usa-sidenav__item">
     
 
-<a href="/HCD-Design-Operations-Guide/cycle/">
+<a href="/HCD-Design-Operations-Guide/setting-up/">
   
-    Discovery Cycle
+    Setting Up
   
 </a>
 
