deploy: cc1bb21f2b65561e6a3ec2444594f3be31439b74

--- a/purpose/index.html
+++ b/purpose/index.html
@@ -301,9 +301,9 @@
   <li class="usa-sidenav__item">
     
 
-<a href="/HCD-Design-Operations-Guide/present/">
+<a href="/HCD-Design-Operations-Guide/designing/">
   
-    Present
+    Designing
   
 </a>
 
