--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
   <li class="usa-sidenav__item">
     
 
-<a href="/HCD-Design-Operations-Guide/present/">
+<a href="/HCD-Design-Operations-Guide/designing/">
   
-    Present
+    Designing
   
 </a>
 
