--- a/whatisHCD/index.html
+++ b/whatisHCD/index.html
@@ -333,9 +333,9 @@
   <li class="usa-sidenav__item">
     
 
-<a href="/HCD-Design-Operations-Guide/present/">
+<a href="/HCD-Design-Operations-Guide/designing/">
   
-    Present
+    Designing
   
 </a>
 
