--- a/making/index.html
+++ b/making/index.html
@@ -310,9 +310,75 @@
 
 <p>If you’re unsure, review the <a href="https://the-lab-at-opm.github.io/website/hcd-guide/design/designed-things.htm">Designed Things</a> section of the Design Phase Concept Guide, where you’ll find explanations of the nature of Products, Services, and Systems.</p>
 
-<h3 id="more-design-methods">More Design Methods</h3>
+<h3 id="design-methods">Design Methods</h3>
+
+<p>In this section, we’ve provided three design methods: Cardsorting, Storyboarding, and Storywriting. Each of these are designed to bridge the gap between the reference deck and a testable prototype of your design concept. They are not, however, necessarily the activities you must use to start. There are lots of getting-you-started design methods in the world. We chose these because they’re extremely low-cost, widely applicable to lots of design ideas, and create a good base from which to develop your prototype into later iterations.</p>
 
 <p>If you find yourself in need of more design methods, look at the collection of Design Methods from the <a href="https://methods.18f.gov/make/">General Services Administration’s 18F.</a></p>
+
+<h3 id="framework---cardsorting">Framework - Cardsorting</h3>
+
+<p><img src="/HCD-Design-Operations-Guide/img/framework-card-sort-01.jpg" alt="A framework for cardsorting. The framwork prompts you to name the design and then write categories of information you want to give your participants to choose from on small, individual cards." /></p>
+
+<p><strong>When:</strong> Card sorting is a useful framework for any design that centers around gathering information from or distributing it to participants. Things that deal with displaying or gathering information are usually products. To function, information-based products also require systems to support them “on the backend”, which means that some people or some system will need to process the information that’s gathered or ensure the accuracy of the information that the product displays. Keep this in mind as you move into your product design; it probably won’t stand alone. If you don’t already have systems in place to support the product, stop your design phase now and re-scope; your design is too big. You’ll need more time to create product-and-system design that works well together.</p>
+
+<p><strong>What:</strong> Card sorting is helpful when you are designing products that distribute a lot of interconnected information to participants. This method is often used by designers who are creating digital products, like websites, but you can also use it when making paper-based products or instructional materials.</p>
+
+<p><strong>Why:</strong> You may be very close to a service or system you are designing for, and so it may be hard to see it from the outside. Building a product that’s in tune with participants’ thinking increases the chances that people will successfully absorb and use the information you provide. As a result, they’re more likely to trust the product.</p>
+
+<p><strong>Get Started:</strong> The materials you need for a card sort are cards (plain index cards will do), a bold marker and your discovery findings.</p>
+
+<p><strong>Review:</strong> Review your discovery findings. What are the topics or themes of information that the participants need to know?</p>
+
+<p><strong>Organize:</strong> What is the hierarchy of this information? Is there a hierarchy? If there is, organize the information in the way your research indicates it should be organized.</p>
+
+<p><strong>Write:</strong> Condense the topics and themes of information into short, descriptive phrases. Write these phrases on the index cards using a bold marker. All the phrases should be written in the same color.</p>
+
+<p><strong>Reuse:</strong> This framework can be used in at least two, if not more, design and testing cycles. In the first, most low-fidelity design, card sorting can help you understand the information and the hierarchy of that information that participants want and need. In a second, medium-level fidelity prototype, card sorting can be used to start identifying layout and formatting for the information.</p>
+
+<h3 id="framework---storyboarding">Framework - Storyboarding</h3>
+
+<p><img src="/HCD-Design-Operations-Guide/img/framework-storyboarding-01.jpg" alt="A framework for storyboarding. The framwork prompts you to name the design and then the steps of a participants' use journey through your product, service, or system." /></p>
+
+<p><strong>When:</strong> Storyboarding’s utility is in designing human-to-human interactions. These interactions are often characterized as services. As references, think of the service of a triage nurse going down a checklist with an ER patient, or a security official guiding people through security screenings. These designs may seem lightweight, but be aware that to successsfully introduce and maintain them requires the buy-in of many groups: the people providing the service, their supervisors, the people administering the space in which the service occurs, et cetera. All of these groups are stakeholders in this design, so design and test accordingly.</p>
+
+<p><strong>What:</strong> Storyboards offer a structure for seeing how your concept works in real life, moves through it, and seeks to accomplish its goal. A storyboard forces you to think through the tough transitions, invisible moments, and entire cast of people who will need to interact with your design concept. Again, start with a low fidelity version to get down the basic intereactions, then use the framework again to one or more frther times to refine the details of the interactions as you hear about them from participants.</p>
+
+<p><strong>Why:</strong> A storyboard is a series of comic book panels. Its structure helps illustrate how your concept might work in real life. By using pictures and panels, a storyboard prompts you to think about how and when your concept comes to life— whether that is the moment when a person clicks on a webpage or the moment when a person picks up the phone to call a service hotline. A storyboard also prompts you to think about the cast of people who work behind the scenes to make your design concept available and helpful to users and the cast of people who will use your concept.</p>
+
+<p><strong>Get Started:</strong> Use the framework to draw out to draw out the interactions required for participants to use your product, service, or system concept. You’ll find that drawing the interactions helps you see the places where you’ve made assumptions regarding how easy an interaction might be.</p>
+
+<p>Your storyboard should comprise at least three elements: people, place, and pathway. You don’t need to be “good at drawing” to make storyboards. You can draw stick figures to represent people and you can draw happy/sad/perplexed faces with speech or thought bubbles to represent their feelings and thoughts.</p>
+
+<p>If you feel like you have a good idea of how your product, service, or system will work, jump right into creating two storyboards.  The first outlines your concept’s debut “in a perfect world”, while its second explores its debut “in the real world”.</p>
+
+<p>Use the framework to draw out each step of a participant’s progress with your concept. How does the participant find or encounter the concept? What information do they need to get started and continue? Will they need to navigate or coordinate with other systems to make progress? How will they know they’ve successfully completed the process?</p>
+
+<p><strong>“In a Perfect World…” Storyboard:</strong> The “perfect world” story can be the north star of your design project. It sets your orientation and gives you something to strive for and work towards. It lays out the ideal flow of your concept and the ideal conditions and circumstances surrounding it.</p>
+
+<p><strong>“In the Real World…” Storyboard:</strong> Conversely, the “real world” story lays out the potential flaws, uncertainties, or hold-ups that might impede or diminish the value and power of your concept. By anticipating these curve balls and impediments, you can help prepare for the unexpected and uncertain when transforming your concept into a durable prototype.</p>
+
+<p>Draw out the interactions required for participants to use your product, service, or system concept. You’ll find that drawing the interactions helps you identify the places where you’ve made assumptions about how easy an interaction might be.</p>
+
+<p>Consider making different storyboards for different use cases. For example, how might your concept play out in the early morning rush hours? How might it play out in the closing hours of the work day? How might it play out in a rural setting? An urban one?</p>
+
+<p><strong>Reuse:</strong> Storyboarding can be used through multiple rounds of making, testing, and refinement. Especially if your designs are entirely embodied in human-to-human interactions, you can use storyboarding from first version to final scenario. Your boards will act both as hypotheses and record of the interaction design. In other words, the boards will help you as you design and test because they show participants what you think the interaction could be like, and they will also act as a record of the intereaction design when you move to the pilot phase.</p>
+
+<h2 id="framework---storywriting">Framework - Storywriting</h2>
+
+<p><img src="/HCD-Design-Operations-Guide/img/framework-storywriting-01.jpg" alt="A framework for writing. The framwork prompts you to name the design and articulate the 5 Ps of storywriting, following the written directions below." /></p>
+
+<p><strong>When:</strong> Storywriting is a framework for making that is useful when, despite all your analysis and study the previous stages, you and the team are still not quite sure what to make. This could be because the specific need of the particpants remains vague or undefined, or because circumstances like team composition or leadership have shifted considerably since Discovery closed. Don’t worry if you find yourself in this position; storywriting is an acccessible, economically responsible way to draw more strong lines around what you might need to design to address participant needs.</p>
+
+<p><strong>Why:</strong> By writing the story of your concept’s debut, you can begin anticipating —and planning for—the expected and unexpected. You don’t have to be Hemingway to tell this story. You simply need to set aside time to jot down your thoughts and order them. Use what you learned in your discovery research as the raw material for your story. Write a story in which the people you’re designing for will recognize themselves.</p>
+
+<p>In this story, try and capture the spirit, or “the gist”, of your design concept— not its specifics. You needn’t include every little feature of your concept. Be more general. Give people an overview and a feel for your concept and the experience, or experiences, it may evoke.</p>
+
+<p><strong>Get Started:</strong> Use the Six Ps Writing Method to get started. These are: Principle, Paramounts, Players, Place, Path, and Point of View. In the Six Ps framework in this section, you will define and fill out six aspects of your story. Using the boxes below or a blank sheet of paper, follow the instructions to create these aspects.</p>
+
+<p>One functional writing note: review the <a href="https://www.plainlanguage.gov/guidelines/">Plain Language Guidelines</a> from the Federal Plain Language Action and Information Network as you write. This will help you ensure that you write with clarity from the start.</p>
+
+<p><strong>Reuse:</strong> You can use this framework for the first two rounds of fidelity-making, just as in the methods above.</p>
 
     </div>
   </main>
